added training plan feature
